Added more archived files from Heroku megauni.com

--- a/public/heroku-mongo/uni/meno_osteo/index.html
+++ b/public/heroku-mongo/uni/meno_osteo/index.html
@@ -8,11 +8,11 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
    <meta http-equiv="Content-Language" content="en-US"/>
 
-<title>Log In</title>
+<title>Prevent Osteoporosis and Menopause symptoms.</title>
 
 <link type="image/x-icon" rel="shortcut icon" href="/favicon.ico"/>
 
-<link type="text/css" rel="stylesheet" media="screen" href="/stylesheets/en-us/Sessions_log_in.css?time=1286211793"/>
+<link type="text/css" rel="stylesheet" media="screen" href="/stylesheets/en-us/Clubs_by_old_id.css?time=1286211794"/>
 
 
 
@@ -20,6 +20,30 @@
   <body id="the_body">
 
 <div id="the_content">
+     <div id="content">
+      <p>The following products can be used also for: Ostero-porosis, Heart (corazon), Menopause, Cancer, Flu, Fibromyalgia, Sleep (sueno), PMS, Hormonal Imbalances</p>
+      <ul class="faq">
+       <li>
+        <div class="question">Vitamin D3 + Magnesium Citrate</div>
+        <div class="answer">
+         <p>LifeSpanNutrition.com &#8211; (800) 247-5731 (correo postal)</p>
+         <p>$15 - "30 Minutes of Sunshine"</p>
+        </div>
+       </li>
+       <li>
+        <div class="question">Barlean's Forti-Flax (Flaxseed meal)</div>
+        <div class="answer">
+         <p>LuckyVitamin.com - 888-635-0474</p>
+         <p>$6 &#8211; Barlean's Forti-Flax (linaza/flaxseed meal in powder form.) or Brevail ($14, pills)</p>
+         <p>Also sold at: Vitamin Shoppe, Lifespan Nutrition</p>
+        </div>
+       </li>
+       <li>
+        <div class="question">Purity Products Bone Density Formula</div>
+        <div class="answer">$18 at LifeSpanNutrition.com</div>
+       </li>
+      </ul>
+     </div>
       <div id="nav_bar">
        <div id="logo">
         <p class="english">
@@ -33,44 +57,18 @@
           <a href="/help/"> Help </a>
          </li>
 
-<li class="selected">
-          <span>&lt; Log-in &gt;</span>
+<li>
+          <a href="/log-in/"> Log-in </a>
          </li>
 
 </ul>
 
 </div>
-     <div id="the_form">
-      <h2>Log-in</h2>
-      <form method="post" name="log_in_form" id="log_in_form" action="/log-in/">
-       <fieldset>
-        <label>Username</label>
-        <input type="text" class="text" value="" name="username" id="member_username"/>
-       </fieldset>
-       <fieldset>
-        <label>Password</label>
-        <input type="password" class="text" value="" name="password" id="member_password"/>
-       </fieldset>
-       <div class="buttons">
-        <button class="create" onclick="document.getElementById('log_in_form').submit(); return false;">Log-in</button>
-       </div>
-      </form>
-      <h2>Forgot your password?</h2>
-      <form method="post" name="reset_password_form" id="reset_password_form" action="/reset-password/">
-       <fieldset>
-        <label>Email</label>
-        <input type="text" class="text" value="" name="email" id="member_email"/>
-       </fieldset>
-       <div class="buttons">
-        <button class="create" onclick="document.getElementById('reset_password_form!').submit(); return false;">Get My Password</button>
-       </div>
-      </form>
-     </div>
    </div>
 
 <script type="text/javascript"> var mp_protocol = (('https:' == document.location.protocol) ? 'https://' : 'http://'); document.write(unescape('%3Cscript src="' + mp_protocol + 'api.mixpanel.com/site_media/js/api/mixpanel.js" type="text/javascript"%3E%3C/script%3E')); </script> 
         <script type="text/javascript"> try {  var mpmetrics = new MixpanelLib('86bbd0a09d702cd9eef7ba93d59dca93'); } catch(err) { null_fn = function () {}; var mpmetrics = {  track: null_fn,  track_funnel: null_fn,  register: null_fn,  register_once: null_fn, register_funnel: null_fn }; } </script>
-        <script type="text/javascript">mpmetrics.track("eveything", { 'referer' : 'http://www.megauni.com/life/da01tv/' });</script>
+        <script type="text/javascript">mpmetrics.track("eveything", { 'referer' : 'http://www.megauni.com/' });</script>
       
 </body>
  </html>
