--- a/public/heroku-mongo/uni/back_pain/index.html
+++ b/public/heroku-mongo/uni/back_pain/index.html
@@ -8,11 +8,11 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
    <meta http-equiv="Content-Language" content="en-US"/>
 
-<title>Log In</title>
+<title>Back pain vitamins and supplements.</title>
 
 <link type="image/x-icon" rel="shortcut icon" href="/favicon.ico"/>
 
-<link type="text/css" rel="stylesheet" media="screen" href="/stylesheets/en-us/Sessions_log_in.css?time=1286211793"/>
+<link type="text/css" rel="stylesheet" media="screen" href="/stylesheets/en-us/Clubs_by_old_id.css?time=1286211796"/>
 
 
 
@@ -20,6 +20,38 @@
   <body id="the_body">
 
 <div id="the_content">
+     <div id="content">
+      <ul class="faq">
+       <li>
+        <div class="question">Methyl B-12.</div>
+        <div class="answer">
+         <span>Buy: </span>
+         <a href="http://www.amazon.com/gp/product/B001F0R7VE/ref=cm_cr_asin_lnk">Methyl B-12 Now Foods Brain B-12, 100 Lozenges / 1000mcg (Pack of 2)</a>
+        </div>
+       </li>
+       <li>
+        <div class="question">Magnesium Citrate or Magnesium Malate</div>
+        <div class="answer">
+         <span>Buy: </span>
+         <a href="http://www.amazon.com/gp/product/B000GFJJKQ/ref=cm_cr_asin_lnk">Source Naturals Magnesium Malate, 1250 mg, Tablets, 360 tablets</a>
+        </div>
+       </li>
+       <li>
+        <div class="question">Vitamin D3</div>
+        <div class="answer">
+         <span>Buy: </span>
+         <a href="http://www.lifespannutrition.com/products.asp?itemnumber=393">30 Minutes of Sunshine</a>
+        </div>
+       </li>
+       <li>
+        <div class="question">Comfrey Ointment</div>
+        <div class="answer">
+         <span>Buy: </span>
+         <a href="http://www.amazon.com/gp/product/B00014DKU2/ref=cm_cr_asin_lnk">Res-Q Ointment (Comfrey Ointment)</a>
+        </div>
+       </li>
+      </ul>
+     </div>
       <div id="nav_bar">
        <div id="logo">
         <p class="english">
@@ -33,44 +65,18 @@
           <a href="/help/"> Help </a>
          </li>
 
-<li class="selected">
-          <span>&lt; Log-in &gt;</span>
+<li>
+          <a href="/log-in/"> Log-in </a>
          </li>
 
 </ul>
 
 </div>
-     <div id="the_form">
-      <h2>Log-in</h2>
-      <form method="post" name="log_in_form" id="log_in_form" action="/log-in/">
-       <fieldset>
-        <label>Username</label>
-        <input type="text" class="text" value="" name="username" id="member_username"/>
-       </fieldset>
-       <fieldset>
-        <label>Password</label>
-        <input type="password" class="text" value="" name="password" id="member_password"/>
-       </fieldset>
-       <div class="buttons">
-        <button class="create" onclick="document.getElementById('log_in_form').submit(); return false;">Log-in</button>
-       </div>
-      </form>
-      <h2>Forgot your password?</h2>
-      <form method="post" name="reset_password_form" id="reset_password_form" action="/reset-password/">
-       <fieldset>
-        <label>Email</label>
-        <input type="text" class="text" value="" name="email" id="member_email"/>
-       </fieldset>
-       <div class="buttons">
-        <button class="create" onclick="document.getElementById('reset_password_form!').submit(); return false;">Get My Password</button>
-       </div>
-      </form>
-     </div>
    </div>
 
 <script type="text/javascript"> var mp_protocol = (('https:' == document.location.protocol) ? 'https://' : 'http://'); document.write(unescape('%3Cscript src="' + mp_protocol + 'api.mixpanel.com/site_media/js/api/mixpanel.js" type="text/javascript"%3E%3C/script%3E')); </script> 
         <script type="text/javascript"> try {  var mpmetrics = new MixpanelLib('86bbd0a09d702cd9eef7ba93d59dca93'); } catch(err) { null_fn = function () {}; var mpmetrics = {  track: null_fn,  track_funnel: null_fn,  register: null_fn,  register_once: null_fn, register_funnel: null_fn }; } </script>
-        <script type="text/javascript">mpmetrics.track("eveything", { 'referer' : 'http://www.megauni.com/life/da01tv/' });</script>
+        <script type="text/javascript">mpmetrics.track("eveything", { 'referer' : 'http://www.megauni.com/' });</script>
       
 </body>
  </html>
