--- a/Public/busy-noise/index.html
+++ b/Public/busy-noise/index.html
@@ -18,6 +18,10 @@
     <script src='http://megauni.s3.amazonaws.com/busy-noise/javascripts/egg_clock.js?v122f8705' type='text/javascript'></script>
     <script src='http://megauni.s3.amazonaws.com/busy-noise/javascripts/chicken.js?v122f83805' type='text/javascript'></script>
     <script src='http://megauni.s3.amazonaws.com/busy-noise/javascripts/pages/eggtimer_index.js?v122f3805' type='text/javascript'></script>
+
+    <style type="text/css">
+      p { padding: 3pt 0; }
+    </style>
   </head>
   <body id='busy_body'>
     <div id='content'>
@@ -45,7 +49,7 @@
 
 
       <div class='column' id='add_stuff'>
-        <ul class='binder'>
+        <ul class='binder' style="display: none;">
           <li class='instructions selected_link'>
             <a href='#instructions' onclick="Swiss.show_folder(  $(this).getParent('li'), '#add_stuff ul li', '#folders div.island' ); return false;">
               Instructions:
@@ -68,8 +72,56 @@
           </li>
         </ul>
         <div id='folders'>
-          <div class='island selected_folder' id='instructions'>
-            <ol>
+          <div class='island selected_folder' id='instructions' style="background-image: none;">
+
+            <p>
+            Due to time constrainsts, I won't be able to maintain this page.
+            (It's for technical and time reasons. Cost is not an issue since the hosting is free.)
+            </p>
+            <p>So I will have to shut it down.</p>
+            <p>Here are some alternatives I found. I have no assoc. w/ them. If you have
+            suggestions on better timers out there, please post them in the comments below.
+            </p>
+
+            <ul style="padding: 0 0 0 30px;">
+              <li style="padding: 2pt;"><a href="https://www.google.com/search?q=+timer">Google Timer</a> -- for web browsers. Google has it's own timer.</li>
+              <li style="padding: 2pt;"><a href="https://play.google.com/store/apps/details?id=com.gau.go.launcherex.gowidget.timer&hl=en">OK Timer</a>
+              -- for Android phones. No ads &amp; free. I use this one every week.</li>
+              <li style="padding: 2pt;"><a href="https://play.google.com/store/apps/details?id=com.absoluteattention.timer&hl=en">Digital Timer</a>
+              -- for Android phones. It's colorful, has no ads &amp; it's free.</li>
+            </ul>
+
+
+            <div class='about' style="border-bottom: 1px dashed #000; margin: 6px 0;">
+            <p>
+            Thanks again for using this old timer. I still have no idea how it can even run
+            since it has not been updated in over 5 years.
+            </p>
+              <p class='contact'>
+                <span>I'm also available on Twitter:</span>
+                <a href='http://twitter.com/un_i_'>@un_i_</a>
+              </p>
+            </div>
+
+            <!-- |||||||||||||||||||||| DISCUS ||||||||||||||||||||| -->
+            <div id="disqus_thread"></div>
+            <script type="text/javascript">
+                /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                var disqus_shortname = 'busynoisetimer'; // required: replace example with your forum shortname
+
+                /* * * DON'T EDIT BELOW THIS LINE * * */
+                (function() {
+                    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+            <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
+
+
+            <ol style="display: none">
               <li class='step step_1'>
                 <div class='title'>Create a new alarm, note or egg timer.</div>
               </li>
@@ -87,12 +139,6 @@
                 </div>
               </li>
             </ol>
-            <div class='about'>
-              <p class='contact'>
-                <span>Post your complaints at:</span>
-                <a href='http://eggtimer.posterous.com/'>http://eggtimer.posterous.com/</a>
-              </p>
-            </div>
           </div>
 
 
