The end for egg timers.

--- a/Public/busy-noise/index.html
+++ b/Public/busy-noise/index.html
@@ -103,6 +103,16 @@
               </p>
             </div>
 
+            <!-- |||||||||||||||||||||| IntenseDebate ||||||||||||||||||||| -->
+            <!-- <script> -->
+            <!-- var idcomments_acct = 'eeff475b799be3e0ffb4c0f81c5b2a8c'; -->
+            <!-- var idcomments_post_id; -->
+            <!-- var idcomments_post_url; -->
+            <!-- </script> -->
+            <!-- <span id="IDCommentsPostTitle" style="display:none"></span> -->
+            <!-- <script type='text/javascript' src='http://www.intensedebate.com/js/genericCommentWrapperV2.js?1'></script> -->
+            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
+
             <!-- |||||||||||||||||||||| DISCUS ||||||||||||||||||||| -->
             <div id="disqus_thread"></div>
             <script type="text/javascript">
